# uav_adaptive_planner

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  additional_figures.ipynb  evaluate_network.ipynb  evaluate_network.sh  evaluate_planner.ipynb  evaluate_planner.sh  max_uncertainty_calculation.ipynb  pyproject.toml  requirements.txt  train.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: citation.yml
adaptive_planner/: __init__.py  draw_field.py  evaluation.py  field.py  georeference.py  gui.py  location.py  planner.py  predict.py  tracking.py  uncertainty_estimation.py  utils.py  visualisation.py
adaptive_planner/cli/: draw_field.py  planner.py
adaptive_planner/executor/: __init__.py  orthomosaic.py  simple.py
adaptive_planner/io/: __init__.py  darwin.py  geojson.py  kml.py  orthomosaic.py  topcon.py  yolo.py
adaptive_planner/planners/: __init__.py  coverage.py  tsp.py
experiments/: create_localization_uncertainty_experiment.py  create_number_of_objects_experiment.py  create_parameter_estimation_experiment.py
experiments/localization_uncertainty/: 12m_planner_clustered_decent_config.yaml  12m_planner_clustered_good_config.yaml  12m_planner_clustered_poor_config.yaml  12m_planner_clustered_very_poor_config.yaml  12m_planner_uniform_decent_config.yaml  12m_planner_uniform_good_config.yaml  12m_planner_uniform_poor_config.yaml  12m_planner_uniform_very_poor_config.yaml  24m_planner_clustered_decent_config.yaml  24m_planner_clustered_good_config.yaml  24m_planner_clustered_poor_config.yaml  24m_planner_clustered_very_poor_config.yaml  24m_planner_uniform_decent_config.yaml  24m_planner_uniform_good_config.yaml  24m_planner_uniform_poor_config.yaml  24m_planner_uniform_very_poor_config.yaml  36m_planner_clustered_decent_config.yaml  36m_planner_clustered_good_config.yaml  36m_planner_clustered_poor_config.yaml  36m_planner_clustered_very_poor_config.yaml  36m_planner_uniform_decent_config.yaml  36m_planner_uniform_good_config.yaml  36m_planner_uniform_poor_config.yaml  36m_planner_uniform_very_poor_config.yaml  48m_planner_clustered_decent_config.yaml  48m_planner_clustered_good_config.yaml  48m_planner_clustered_poor_config.yaml  48m_planner_clustered_very_poor_config.yaml  48m_planner_uniform_decent_config.yaml  48m_planner_uniform_good_config.yaml  48m_planner_uniform_poor_config.yaml  48m_planner_uniform_very_poor_config.yaml  baseline_12m_planner_clustered_decent_config.yaml  baseline_12m_planner_clustered_good_config.yaml  baseline_12m_planner_clustered_perfect_config.yaml  baseline_12m_planner_clustered_poor_config.yaml  baseline_12m_planner_clustered_very_poor_config.yaml  (+37 more)
fields/: clustered_1.yaml  clustered_2.geojson  clustered_2.yaml  clustered_3.geojson  clustered_3.yaml  clustered_4.geojson  clustered_4.yaml  uniform_1.geojson  uniform_1.yaml  uniform_2.yaml  uniform_3.yaml  uniform_4.yaml
tools/: create_detection_dataset.py  flight_to_video.py  image_detect_gps.py  image_gt_gps.py  mask_detection_dataset.py  metashape.py  plot_markers.py  show_image.py  train.py  transform_markers.py
(+145 files in other folders)
